[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true } 
udp_test = { path = ".." }
inquire = "0.6.2"
strum = { workspace = true }
rmp-serde = { workspace = true }
